[package]
name = "api-gtw"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = "0.10.68"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.217"
tokio = { version = "1.36", features = ["full"] }
httparse = "1.9.5"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["stream"] }
serde_json = "1.0.134"
actix-cors = "0.7.0"