[package]
name = "api-gtw"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-cors = "0.7.0"
openssl = "0.10.68"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_derive = "1.0.217"
serde_yaml = "0.9"
tokio = { version = "1.43", features = ["full"] }
httparse = "1.9.5"
log = "0.4"
futures = "0.3"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["stream"] }
serde_json = "1.0.135"
regex = "1.11.1"
uuid = { version = "1.11.0", features = ["v4"]}
